--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.css
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.css
@@ -58,7 +58,7 @@
 
 
 /* Avatar File Upload */
-.profile-card-image-ui {
+.ro-pd-profile-card-image-ui {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,12 +70,12 @@
   background-color: #fff;
 }
 
-.profile-image-container {
+.ro-pd-profile-image-container {
   width: 150px;
   height: 150px;
 }
 
-.profile-image-preview {
+.ro-pd-profile-image-preview {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -83,7 +83,7 @@
   border-radius: 10%;
 }
 
-.profile-actions {
+.ro-pd-profile-actions {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -95,7 +95,7 @@
   margin: 0 5px;
 }
 
-.upload-instruction {
+.ro-pd-upload-instruction {
   font-size: 12px;
   color: #666; 
   text-align: center;
@@ -103,7 +103,7 @@
 }
 
 @media (max-width: 768px) {
-  .profile-image-container {
+  .ro-pd-profile-image-container {
     width: 120px;
     height: 120px;
   }
