--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
@@ -5,13 +5,13 @@
     </div>
     <div class="card-body p-3 bg-light">
       <form [formGroup]="stepOneForm" (ngSubmit)="stepOneSubmit()" autocomplete="off" novalidate #formRef="ngForm" class="Personal-Details">
-        <div class="profile-card-image-ui">
-          <div class="profile-image-container">
-            <img [src]="ProfileImage" alt="Single File Preview" class="profile-image-preview" />
+        <div class="ro-pd-profile-card-image-ui">
+          <div class="ro-pd-profile-image-container">
+            <img [src]="ProfileImage" alt="Single File Preview" class="ro-pd-profile-image-preview" />
             <div class="profile-overlay"></div>
           </div>
-          <small class="upload-instruction">JPEG, PNG. Max size: 2MB</small>
-          <div class="profile-actions">
+          <small class="ro-pd-upload-instruction">JPEG, PNG. Max size: 2MB</small>
+          <div class="ro-pd-profile-actions">
             <button type="button" class="btn btn-success action-btn" (click)="triggerFileInput($event)">
               <i class="fa-solid fa-upload"></i> Upload
             </button>
@@ -24,8 +24,8 @@
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="titleName" class="form-label ps-1">Title<span class="asterisk">*</span></label>
-            <select class="form-select" id="titleName" formControlName="Title" aria-label="Default select example">
+            <label for="ro-pd-titleName" class="form-label ps-1">Title<span class="asterisk">*</span></label>
+            <select class="form-select" id="ro-pd-titleName" formControlName="Title" aria-label="Default select example">
               <option value="">Select Title</option>
               <option value="Mr">Mr</option>
               <option value="Mrs">Mrs</option>
@@ -33,8 +33,8 @@
             <span class="error" *ngIf="stepOneForm.controls['Title'].hasError('required') && formRef.submitted">Please select a title</span>
           </div>
           <div class="col-md-6 mb-1">
-            <label for="fname" class="form-label ps-1">First Name<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="fname" formControlName="FirstName" placeholder="Enter First Name" />
+            <label for="ro-pd-fname" class="form-label ps-1">First Name<span class="asterisk">*</span></label>
+            <input type="text" class="form-control" id="ro-pd-fname" formControlName="FirstName" placeholder="Enter First Name" />
             <span class="error" *ngIf="stepOneForm.controls['FirstName'].hasError('required') && formRef.submitted">Please enter first name</span>
             <span class="error" *ngIf="stepOneForm.controls['FirstName'].hasError('minlength') && formRef.submitted">
               First name must be at least 2 characters
@@ -50,12 +50,12 @@
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="lname" class="form-label ps-1">Last Name</label>
-            <input type="text" class="form-control" id="lname" formControlName="LastName" placeholder="Enter Last Name" />
+            <label for="ro-pd-lname" class="form-label ps-1">Last Name</label>
+            <input type="text" class="form-control" id="ro-pd-lname" formControlName="LastName" placeholder="Enter Last Name" />
           </div>
           <div class="col-md-6 mb-1">
-            <label for="dob" class="form-label ps-1">Date of Birth<span class="asterisk">*</span></label>
-            <input type="date" class="form-control" id="dob" formControlName="DateOfBirth" />
+            <label for="ro-pd-dob" class="form-label ps-1">Date of Birth<span class="asterisk">*</span></label>
+            <input type="date" class="form-control" id="ro-pd-dob" formControlName="DateOfBirth" />
             <span class="error" *ngIf="stepOneForm.controls['DateOfBirth'].hasError('required') && formRef.submitted">
               Please enter date of birth
             </span>
@@ -67,8 +67,8 @@
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="gender" class="form-label ps-1">Gender<span class="asterisk">*</span></label>
-            <select class="form-select" formControlName="Gender" aria-label="Default select example">
+            <label for="ro-pd-gender" class="form-label ps-1">Gender<span class="asterisk">*</span></label>
+            <select class="form-select" id="ro-pd-gender" formControlName="Gender" aria-label="Default select example">
               <option value="">Select Gender</option>
               <option value="Male">Male</option>
               <option value="Female">Female</option>
@@ -80,8 +80,8 @@
           </div>
 
           <div class="col-md-6 mb-1">
-            <label for="phnNumber" class="form-label ps-1">Phone No.<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="phnNumber" formControlName="PhoneNumber" placeholder="Enter Phone No." />
+            <label for="ro-pd-phnNumber" class="form-label ps-1">Phone No.<span class="asterisk">*</span></label>
+            <input type="text" class="form-control" id="ro-pd-phnNumber" formControlName="PhoneNumber" placeholder="Enter Phone No." />
             <span class="error" *ngIf="(stepOneForm.controls['PhoneNumber'].hasError('required')
                                      || stepOneForm.controls['PhoneNumber'].hasError('pattern')
                                      || stepOneForm.controls['PhoneNumber'].hasError('minlength')
@@ -93,8 +93,8 @@
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="secondryNumber" class="form-label ps-1">Secondary Phone Number</label>
-            <input type="text" class="form-control" id="secondryNumber" formControlName="SecondryNumber" placeholder="Enter Secondary Phone No." />
+            <label for="ro-pd-secondryNumber" class="form-label ps-1">Secondary Phone Number</label>
+            <input type="text" class="form-control" id="ro-pd-secondryNumber" formControlName="SecondryNumber" placeholder="Enter Secondary Phone No." />
             <span class="error" *ngIf="(stepOneForm.controls['SecondryNumber'].hasError('pattern')
                                      || stepOneForm.controls['SecondryNumber'].hasError('minlength')
                                      || stepOneForm.controls['SecondryNumber'].hasError('maxlength')) && formRef.submitted">
@@ -103,8 +103,8 @@
           </div>
 
           <div class="col-md-6 mb-1">
-            <label for="email" class="form-label ps-1">Email Address<span class="asterisk">*</span></label>
-            <input type="email" class="form-control" id="email" formControlName="Email" placeholder="Enter Email Address" />
+            <label for="ro-pd-email" class="form-label ps-1">Email Address<span class="asterisk">*</span></label>
+            <input type="email" class="form-control" id="ro-pd-email" formControlName="Email" placeholder="Enter Email Address" />
             <span class="error" *ngIf="(stepOneForm.controls['Email'].hasError('required') 
                                       || stepOneForm.controls['Email'].hasError('email')
                                       || stepOneForm.controls['Email'].hasError('restrictedDomain')) 
@@ -116,20 +116,20 @@
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="streetAddress" class="form-label ps-1">Street Address<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="streetAddress" formControlName="StreetAddress" placeholder="Enter Street Address" />
+            <label for="ro-pd-streetAddress" class="form-label ps-1">Street Address<span class="asterisk">*</span></label>
+            <input type="text" class="form-control" id="ro-pd-streetAddress" formControlName="StreetAddress" placeholder="Enter Street Address" />
             <span class="error" *ngIf="stepOneForm.controls['StreetAddress'].hasError('required') && formRef.submitted">Please enter street address</span>
           </div>
           <div class="col-md-6 mb-1">
-            <label for="landmark" class="form-label ps-1">Landmark</label>
-            <input type="text" class="form-control" id="landmark" formControlName="Landmark" placeholder="Enter landmark " />
+            <label for="ro-pd-landmark" class="form-label ps-1">Landmark</label>
+            <input type="text" class="form-control" id="ro-pd-landmark" formControlName="Landmark" placeholder="Enter landmark " />
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="country" class="form-label ps-1">Country<span class="asterisk">*</span></label>
-            <select class="form-select" formControlName="Country" (change)="loadStates($event)">
+            <label for="ro-pd-country" class="form-label ps-1">Country<span class="asterisk">*</span></label>
+            <select class="form-select" id="ro-pd-country" formControlName="Country" (change)="loadStates($event)">
               <option value="">Select Country</option>
               <option *ngFor="let country of countries" [value]="country.countryCode">{{ country.countryName }}</option>
             </select>
@@ -138,8 +138,8 @@
             </span>
           </div>
           <div class="col-md-6 mb-1">
-            <label for="state" class="form-label ps-1">State<span class="asterisk">*</span></label>
-            <select class="form-select" formControlName="State" (change)="loadCities($event)">
+            <label for="ro-pd-state" class="form-label ps-1">State<span class="asterisk">*</span></label>
+            <select class="form-select" id="ro-pd-state" formControlName="State" (change)="loadCities($event)">
               <option value="">Select state</option>
               <option *ngFor="let state of states" [value]="state.name">{{ state.name }}</option>
             </select>
@@ -151,8 +151,8 @@
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="city" class="form-label ps-1">City<span class="asterisk">*</span></label>
-            <select class="form-select" formControlName="City">
+            <label for="ro-pd-city" class="form-label ps-1">City<span class="asterisk">*</span></label>
+            <select class="form-select" id="ro-pd-city" formControlName="City">
               <option value="">Select city</option>
               <option *ngFor="let city of cities" [value]="city.name">{{ city.name }}</option>
             </select>
@@ -161,8 +161,8 @@
             </span>
           </div>
           <div class="col-md-6 mb-1">
-            <label for="postalCode" class="form-label ps-1">Postal Code/ZIP Code<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="postalCode" formControlName="PostalCode" placeholder="Enter Postal Code/ZIP Code" />
+            <label for="ro-pd-postalCode" class="form-label ps-1">Postal Code/ZIP Code<span class="asterisk">*</span></label>
+            <input type="text" class="form-control" id="ro-pd-postalCode" formControlName="PostalCode" placeholder="Enter Postal Code/ZIP Code" />
             <span class="error" *ngIf="(stepOneForm.controls['PostalCode'].hasError('required')
                                     || stepOneForm.controls['PostalCode'].hasError('minlength') 
                                     || stepOneForm.controls['PostalCode'].hasError('maxlength')
@@ -170,6 +170,26 @@
               Postal code must be a 6-digit number
             </span>
 
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-1">
+            <label for="ro-pd-password" class="form-label ps-1">Password<span class="asterisk">*</span></label>
+            <input type="password"  class="form-control" id="ro-pd-password" formControlName="Password" placeholder="Enter Password" />
+            <span class="error" *ngIf="(stepOneForm.controls['Password'].hasError('required') 
+                                    || stepOneForm.controls['Password'].hasError('minlength')
+                                    || stepOneForm.controls['Password'].hasError('maxlength')) && formRef.submitted">
+              Please enter a password (at least 6 characters)
+            </span>
+          </div>
+          <div class="col-md-6 mb-1">
+            <label for="ro-pd-cnfmPassword" class="form-label ps-1">Confirm Password<span class="asterisk">*</span></label>
+            <input type="password" class="form-control" id="ro-pd-cnfmPassword" formControlName="ConfirmPassword" placeholder="Enter Confirm Password" />
+            <span class="error" *ngIf="(stepOneForm.controls['ConfirmPassword'].hasError('required') 
+                                     || stepOneForm.controls['ConfirmPassword'].hasError('isMatching')) && formRef.submitted">
+              Please confirm your password (Passwords must match)
+            </span>
           </div>
         </div>
 
